--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,20 +1,8 @@
-
-/* Styles from React-Redux-Phaser-Tutorial */
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 body {
-  /* margin: 0; */
-  /* background: rgb(42, 40, 92); */
-  /* background: linear-gradient(
-    180deg,
-    rgba(42, 40, 92, 1) 35%,
-    rgba(80, 107, 137, 1) 100%
-  ); */
-  font-family: 'Source Code Pro', monospace;
-  /* color: #ced4d6; */
-}
-p {
-  /* margin: 0; */
-  /* color: white; */
+  font-family: 'Lato', sans-serif;
+  overflow: hidden;
 }
 
 .content {
@@ -22,11 +10,4 @@ p {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  /* align-items: stretch; */
-}
-
-button {
-  border: none;
-  font-family: 'Source Code Pro', monospace;
-  margin: 10px 0px 10px 0px;
 }
