--- a/client/src/components/ui/ui.module.css
+++ b/client/src/components/ui/ui.module.css
@@ -176,3 +176,61 @@
     text-rendering: optimizeLegibility;
     margin: auto;
 }
+
+/* Group list */
+.groupListContainer {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+}
+
+.groupListHeader {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    padding: 14px 24px;
+    height: 10%;
+}
+
+.groupListContent {
+    height: 75%;
+    width: 100%;
+}
+
+.groupListItem {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    padding: 14px 24px;
+    cursor: pointer;
+}
+
+.groupListItem:hover {
+    background-color: #F3F3F3;
+}
+
+.groupListItemText {
+    font-size: 20px;
+    font-weight: 600;   
+}
+
+.groupListButton {
+    display: flex;
+    align-items: center;
+    padding: 0px 5px 0px 20px;
+    left: 20%;
+    bottom: 20%;
+    position: absolute;
+    width: 177px;
+    height: 59px;
+    font-size: 15px;
+    line-height: 18px;
+    font-weight: 600;
+    color: black;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 6px rgba(74, 74, 74, 0.25);
+    border-radius: 11px;
+    cursor: pointer;
+}
