refactor : Request and response formats are defined and used. add : show group members.

--- a/client/src/components/ui/ui.module.css
+++ b/client/src/components/ui/ui.module.css
@@ -216,12 +216,10 @@
     font-weight: 600;   
 }
 
-.groupListButton {
+.overlayButton {
     display: flex;
     align-items: center;
     padding: 0px 5px 0px 20px;
-    left: 20%;
-    bottom: 20%;
     position: absolute;
     width: 177px;
     height: 59px;
