--- a/client/src/components/ui/ui.module.css
+++ b/client/src/components/ui/ui.module.css
@@ -220,14 +220,16 @@
 
 /* Tooltip and Alerts */
 .tooltip {
-    position: absolute;
+    position: fixed;
     width: 447px;
-    height: 229px;
-    left: 0px;
-    top: 0px;
-    
+    height: 447px;
+    margin: auto;
+    bottom: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;   
     background: #FFFFFF;
-    box-shadow: 0px 4px 10px rgba(109, 109, 109, 0.25);
+    box-shadow: 0px 4px 6px rgba(74, 74, 74, 0.25);
     border-radius: 14px;
 }
 
