feat : fadeout whole screen when scene changes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,3 +11,11 @@ body {
   flex-direction: row;
   justify-content: space-around;
 }
+
+.fade-in {
+  transition: opacity 1s ease;
+}
+.fade-out {
+  opacity: 0;
+  transition: opacity 1s ease;
+}
