--- a/client/src/components/ui/checklist.module.css
+++ b/client/src/components/ui/checklist.module.css
@@ -2,8 +2,8 @@
 
 .tabBox {
     display: flex;
-    width: 800px;
-    height: 900px;
+    width: 600px;
+    height: 750px;
 }
 
 .icons {
@@ -113,7 +113,7 @@
 }
 
 .groupGoalsContainer {
-    height: 820px;
+    height: 670px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -122,7 +122,7 @@
 }
 
 .groupGoalBox {
-    width: 750px;
+    width: 520px;
     min-height: min-content;
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(238, 238, 238, 0.50);
@@ -183,13 +183,13 @@
 .textTitle {
     font-family: 'Lato', sans-serif;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .textContent {
     font-family: 'Lato', sans-serif;
     font-weight: 300;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .accept {
@@ -203,7 +203,7 @@
     text-align: center;
     line-height: 40px;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 16px;
 
     background: #6FA270;
     box-shadow: 0px 4px 10px rgba(136, 208, 156, 0.15);
@@ -221,7 +221,10 @@
 }
 
 .personalContainer {
+    height: 520px;
     padding: 40px;
+    padding-bottom: 150px;
+    overflow: auto;
 }
 
 .groupGoals {
@@ -252,7 +255,7 @@
     font-family: 'Lato', sans-serif;
     text-align: center;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .checklistContentDone {
@@ -262,7 +265,7 @@
     font-family: 'Lato', sans-serif;
     text-align: center;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 18px;
     text-decoration: line-through;
 }
 
@@ -273,7 +276,7 @@
     font-family: 'Lato', sans-serif;
     text-align: center;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .doneBox {
@@ -407,7 +410,7 @@
 .floatText {
     font-family: 'Lato', sans-serif;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 45px;
     color: #6FA270;
     z-index: 1040;
@@ -462,7 +465,7 @@
 
     font-family: 'Lato', sans-serif;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 18px;
     background-color: #FBFBFB;
     color: #BBBBBB;
 }
@@ -506,23 +509,25 @@
 .modalTitle {
     font-family: 'Lato', sans-serif;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 80px;
     color: #6FA270;
 }
 
 .modalContent {
     height: 100px;
+    position: relative;
     display: flex;
     align-items: center;
+    justify-content: center;
     padding-left: 30px;
-    gap: 10px;
+    gap: 25px;
 }
 
 .modalContentText {
     font-family: 'Lato', sans-serif;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .modalFooter {
@@ -544,7 +549,7 @@
     text-align: center;
     line-height: 40px;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 16px;
 
     background: #F2F2F2;
     box-shadow: 0px 4px 10px rgba(226, 226, 226, 0.15);
@@ -561,7 +566,7 @@
     text-align: center;
     line-height: 40px;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 16px;
 
     background: #6FA270;
     box-shadow: 0px 4px 10px rgba(136, 208, 156, 0.15);
@@ -572,13 +577,15 @@
 .picker {
     padding-top: 4px;
     padding-left: 20px;
-    border-radius: 0 0 0 8px;
+    margin-right: 20px;
+    width: 80%;
+    border-radius: 5px 5px 5px 5px;
     border-width: 0;
 
     font-family: 'Lato', sans-serif;
     font-weight: 400;
     font-size: 20px;
-
+    text-align: center;
     background-color: #FBFBFB;
     color: #BBBBBB;
 
@@ -589,6 +596,15 @@
     cursor: pointer;
 }
 
+.picker:hover {
+
+    outline: 2px solid #CDCDCD;
+}
+
 .picker:focus {
     outline: none;
+}
+
+.modalForm {
+    width: 100px;
 }
