--- a/client/src/components/ui/Home/home.module.css
+++ b/client/src/components/ui/Home/home.module.css
@@ -1,6 +1,22 @@
 /* $sidebar-width: 110px; */
 /* $infoArea-width: 390px; */
 
+.backdrop {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: 50%;
+}
+
+.walkButton {
+  position: absolute;
+  right: 30%;
+  top: 40%;
+  cursor: pointer;
+  color: white;
+}
+
 .sidebar {
   height: 100%;
   width: 110px;
