--- a/client/src/components/ui/ui.module.css
+++ b/client/src/components/ui/ui.module.css
@@ -242,6 +242,23 @@
     cursor: pointer;
 }
 
+.postButton {
+    display: flex;
+    align-items: center;
+    padding: 0px 5px 0px 20px;
+    /* position: absolute; */
+    width: 177px;
+    height: 59px;
+    font-size: 15px;
+    line-height: 18px;
+    font-weight: 600;
+    color: black;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 6px rgba(74, 74, 74, 0.25);
+    border-radius: 11px;
+    /* cursor: pointer; */
+}
+
 /* Tooltip and Alerts */
 .tooltip {
     position: fixed;
