--- a/client/src/components/ui/ui.module.css
+++ b/client/src/components/ui/ui.module.css
@@ -82,6 +82,17 @@
     transform: scale(1.2);
 }
 
+.userAvatarItem {
+    position : absolute;
+    white-space:nowrap;
+    
+    color: #0C0C0C;
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+    font-weight: 600;
+    font-size: 14px;
+}
+
 .avatarContainer {
     position: absolute;
     left: 2.5%;
