--- a/client/src/components/ui/Home/home.module.css
+++ b/client/src/components/ui/Home/home.module.css
@@ -1,12 +1,9 @@
-/* $sidebar-width: 110px; */
-/* $infoArea-width: 390px; */
-
 .backdrop {
   position: absolute;
   width: 100%;
   height: 100%;
   background-color: #000;
-  opacity: 50%;
+  opacity: 0.5;
 }
 
 .walkButton {
