--- a/client/src/components/ui/Study/study.module.css
+++ b/client/src/components/ui/Study/study.module.css
@@ -1,7 +1,3 @@
-.studyMain {
-  /* color: white; */
-}
-
 .postAreaContainer {
   position: absolute;
   left: -20px;
@@ -132,7 +128,7 @@
   align-items: center;
   padding: 0px 5px 0px 20px;
   margin-bottom: 20px;
-  position: absolute;
+  /* position: absolute; */
   width: 300px;
   height: 59px;
   font-size: 15px;
@@ -142,7 +138,7 @@
   background: #FFFFFF;
   box-shadow: 0px 4px 6px rgba(74, 74, 74, 0.25);
   border-radius: 11px;
-  /* cursor: pointer; */
+  cursor: pointer;
 }
 
 .checklist {
@@ -188,4 +184,49 @@
   direction: ltr;
   text-rendering: optimizeLegibility;
   margin-right: 15px;
+}
+
+.outerContainer {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
+.innerContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+}
+
+.closeButton {
+
+}
+
+.page {
+
+}
+
+.buttonFlip {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+
+  border-radius: 50%;
+}
+
+.buttonFlipDisabled {
+  
+}
+
+.replyButtonL {
+
+}
+
+.replyButtonS {
+
+}
+
+.replyInput {
+
 }
