--- a/client/src/components/ui/ui.module.css
+++ b/client/src/components/ui/ui.module.css
@@ -85,7 +85,8 @@
 .userAvatarItem {
     position : absolute;
     white-space:nowrap;
-    
+    margin-left: auto;
+    margin-right: auto;
     color: #0C0C0C;
     font-family: 'Lato', sans-serif;
     text-align: center;
